[tool.poetry]
name = "export"
version = "0.2.1"
description = "Control module exports"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tombulled/export"
repository = "https://github.com/tombulled/export"
documentation = "https://github.com/tombulled/export"
keywords = ["python", "export", "public", "private"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
mypy = "^1.3.0"
black = "^23.3.0"
pytest = "^7.3.2"
isort = "^5.12.0"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
allow_empty_bodies = true

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "protected-access",
    "too-few-public-methods",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
